--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,49 @@
-<h1>Ronaldo Campos</h1>
+<div class="container">
+  <h1>Welcome to CSE Motors!</h1>
+  <div class="car-image">
+    <img src="./images/vehicles/delorean.jpg" alt="DMC DeLorean" />
+  </div>
+  <div class="delorean-info">
+    <h2>DMC Delorean</h1>
+    <ul>
+      <li>3 Cup holders</li>
+      <li>Superman doors</li>
+      <li>Fuzzy dice!</li>
+    </ul>
+    <button>Own Today</button>
+  </div>
+
+  <div class="grid-info">
+    <div class="reviews">
+        <h2>DMC DeLorean Reviews</h2>
+        <ul>
+          <li>"So fast it's almost like traveling in time." (4/5)</li>
+          <li>"Coolest ride on the road." (4/5)</li>
+          <li>"I'm feeling McFly!" (5/5)</li>
+          <li>"The most futuristic ride of our day." (4.5/5)</li>
+          <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+      </div>
+      <div class="upgrades">
+        <h2>DeLorean Upgrades</h2>
+        <div class="figures">
+            <figure>
+                <img src="./images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+                <figcaption>Flux Capacitor</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/upgrades/flame.jpg" alt="Flame Decals" />
+                <figcaption>Flame Decals</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers"/>
+                <figcaption>Bumper Stickers</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+                <figcaption>Hub Caps</figcaption>
+            </figure>
+        </div>
+      </div>
+  </div>
+</div>
