--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,10 +52,15 @@ nav ul {
   border-radius: 5px;
 }
 
-nav ul li {
+nav ul li a {
   color: #FFF;
   font-weight: 700;
   font-size: 20px;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #b29af9;
 }
 
 /*** Main ***/
@@ -163,12 +168,126 @@ nav ul li {
 
 footer {
   margin: 15px;
+  padding: 15px;
 }
 
 footer p {
   font-size: 16px;
   color: #7c7878;
   font-weight: 700;
+  margin-bottom: 16px;
+}
+
+/* Vehicle details */
+#inv-display {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 20px;
+  margin: 0;
+  justify-content: space-around;
+}
+
+.vehicle-item {
+  width: 25%;
+  margin: 20px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+}
+
+.vehicle-item:hover {
+  transform: scale(1.03); 
+}
+
+.vehicle-item img {
+  width: 100%;
+  height: 80%;
+  display: block;
+}
+
+.namePrice {
+  padding: 10px;
+  background-color: #f8f8f8;
+  text-align: center;
+}
+
+.namePrice h2 a{
+  text-decoration: none;
+  margin-bottom: 5px;
+} 
+
+.namePrice span {
+  font-size: 20px;
+}
+
+
+.detail-title {
+  text-align: center;
+  margin: 20px;
+}
+
+.car-listing {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.car-image{
+  grid-column: 1/2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+}
+
+.car-information {
+  width: 90%;
+}
+
+.info-section {
+  background-color: #b29af9;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+.car-listing h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.car-listing div {
+  margin-bottom: 16px;
+  font-size: 24px;
+}
+
+/* ERROR */
+
+.error-display {
+  text-align: center;
+  margin: 80px;
+  padding: 100px;
+  background-color: rgb(187, 8, 8);
+  border-radius: 10px;
+}
+
+.error-display h2 {
+  font-size: 50px;
+  color: white;
+  margin-bottom: 15px;
+}
+
+.error-display p {
+  font-size: 40px;
+  color: white;
+}
+
+.error-link {
+  font-weight: 700;
+  text-decoration: none;
+  color: red;
+  font-size: 16px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 600px){
@@ -227,4 +346,39 @@ footer p {
     padding: 20px;
   }
 
+  .car-listing {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    padding: 14px;
+  }
+  
+  .car-image {
+    width: 100%;
+  }
+  
+  .car-information {
+    width: 100%;
+    text-align: center;
+  }
+
+  .vehicle-item {
+    width: 90%;
+  }
+
+  .error-display {
+    text-align: center;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .error-display h2 {
+    font-size: 30px;
+  }
+  
+  .error-display p {
+    font-size: 20px;
+  }
 }
