--- a/views/inventory/listing.ejs
+++ b/views/inventory/listing.ejs
@@ -1,5 +1,5 @@
 <% if (title) { %>
-    <h1><%= title %></h1>
+    <h1 class="detail-title"><%= title %></h1>
     <% } else {
       res.redirect('/')
     } %>
