--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,12 +32,14 @@ body{
 .siteName a{
   text-decoration: none;
   color: black;
+  font-family: "Roboto Slab", serif ;
 }
 
 #tools a{
-  font-size: 20px;
+  font-size: 24px;
   text-transform: capitalize;
   text-decoration: none;
+  font-family: "Roboto Slab", serif ;
 }
 
 /*** Navigation ***/
@@ -57,6 +59,7 @@ nav ul li a {
   font-weight: 700;
   font-size: 20px;
   text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
 
 nav ul li a:hover {
@@ -71,6 +74,7 @@ nav ul li a:hover {
 
 .container h1 {
   font-size: 40px;
+  font-family: "Roboto Slab", serif;
 }
 
 .car-image{
@@ -164,6 +168,16 @@ nav ul li a:hover {
   line-height: 3;
 }
 
+.reviews ul li {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+}
+
+.reviews h2,
+.upgrades h2 {
+  font-family: "Roboto Slab", serif;
+}
+
 /*** Footer ***/
 
 footer {
@@ -175,6 +189,7 @@ footer p {
   font-size: 16px;
   color: #7c7878;
   font-weight: 700;
+  font-family: "Roboto Slab", serif;
   margin-bottom: 16px;
 }
 
@@ -214,16 +229,21 @@ footer p {
 .namePrice h2 a{
   text-decoration: none;
   margin-bottom: 5px;
+  font-family: "Poppins", sans-serif;
 } 
 
 .namePrice span {
   font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  margin-top: 8px;
+  font-weight: 700;
 }
 
 
 .detail-title {
   text-align: center;
   margin: 20px;
+  font-family: "Roboto Slab", serif;
 }
 
 .car-listing {
