--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -310,6 +310,181 @@ footer p {
   margin-bottom: 10px;
 }
 
+.notice {
+  width: 40%;
+  color: rgb(184, 194, 0);
+  list-style: none;
+  background-color: rgba(0, 0, 0, 0.747);
+  padding: .5rem;
+  border-radius: 3px;
+}
+
+.notice li::before {
+  content: "> ";
+}
+
+/* Login form  */
+.account-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;  
+  margin-top: 30px;        
+  text-align: center;   
+}
+
+.input-box {
+  text-align: left;
+  background-color: rgb(40, 97, 183);
+  color: rgb(236, 229, 209);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: .5rem;
+  box-shadow: 0 .2rem .5rem rgba(0, 0, 0, 0.298);
+  margin-bottom: 1rem;
+  width: 80%;
+  align-self: center;
+  margin-top: 30px;
+}
+.input-box label {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  position: relative;
+}
+.input-box input, .input-box select, .input-box textarea, #classificationList {
+  padding: .5rem;
+  border: none;
+}
+.input-box input::placeholder, .input-box select::placeholder, .input-box textarea::placeholder {
+  color: rgba(0, 0, 0, 0.27)
+}
+.input-box input:invalid, .input-box textarea:invalid, .input-box select:invalid {
+  border-right: 5px solid red;
+}
+.input-box input[type="submit"] {
+  font-size: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  width: fit-content;
+  align-self: center;
+  background-color: rgb(170,7,7);
+  color: white;
+  border: none;
+  border-radius: .5rem;
+  box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.368);
+}
+.input-box .reveal-button {
+  color: transparent; /* To make wave happy */
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  background-color: transparent;
+  background-image: url("/images/site/eye_open.svg");
+  background-size: contain;
+  height: 2rem;
+  width: 2rem;
+  border: 0;
+}
+.input-box .reveal-button.active {
+  background-image: url("/images/site/eye_closed.svg");
+}
+.fine-print {
+  font-size: .75em;
+}
+
+/* Inventory display */
+
+#inventoryDisplay tr td:nth-child(1) {
+  width: auto;
+}
+#inventoryDisplay tr td:nth-child(2) {
+  width: 75px;
+  text-align: end;
+}
+#inventoryDisplay tr td:nth-child(3) {
+  width: 75px;
+  text-align: end;
+}
+
+/* Message view */
+.message-view {
+  background-color: rgba(255, 255, 255, 0.436);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.message-view dl {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  margin: 0;
+  gap: 1rem;
+
+}
+.message-view dl dt, .message-view dl dd {
+  margin: 0;
+}
+.message-view dl dt {
+  font-weight: bold;
+}
+.message-view dl dt:after {
+  content: ":";
+}
+.message-pane {
+  white-space: pre-wrap;
+  font-family: "Poppins", sans-serif;
+}
+
+table {
+  border: 1px solid rgba(0, 0, 0, 0.269);
+  padding: .5rem;
+  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.107) inset;
+}
+table thead tr th {
+  border-bottom: 2px solid rgb(41, 84, 18);
+}
+
+/* Button strip style */
+.button-strip {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: .5rem;
+}
+.button-strip button, .button-strip a, .button-strip input {
+  box-sizing: border-box;
+  border: 0 solid;
+  border-radius: 0;
+  padding: .5rem;
+  height: 50px;
+  width: fit-content;
+  background-color: white;
+  cursor: pointer;
+  transition: .3s box-shadow, .3s transform;
+}
+.button-strip button:hover, .button-strip a:hover, .button-strip input:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.186);
+  transform: translateY(-2px);
+  transition: .3s box-shadow, .3s transform;
+}
+.button-strip img {
+  height: 100%;
+  width: 100%;
+  pointer-events: none;
+}
+.button-strip *:first-child {
+  border-radius: .5rem 0 0 .5rem;
+}
+.button-strip *:last-child {
+  border-radius: 0 .5rem .5rem 0;
+}
+.button-strip *:only-child {
+  border-radius: .5rem;
+}
+
 @media screen and (max-width: 600px){
   body {
     background-image: none;
