--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Welcome to CSE Motors!</h1>
+  <%- messages() %>
   <div class="car-image">
     <img src="./images/vehicles/delorean.jpg" alt="DMC DeLorean" />
   </div>
