--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,13 @@ body{
   border-radius: 7px;
 }
 
+#messages {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 30px;
+}
+
 /*** Header ***/
 
 #top-header{
@@ -332,13 +339,57 @@ footer p {
 }
 
 /* Login form  */
-.account-container {
+.account-container,
+.account-management {
   display: flex;
   flex-direction: column;
   justify-content: center; 
   align-items: center;  
   margin-top: 30px;        
   text-align: center;   
+}
+
+.account-container h1 {
+  font-family: "Roboto Slab", serif ;
+}
+
+.account-management h1 {
+  font-family: "Roboto Slab", serif ;
+  margin-bottom: 50px;
+}
+
+.account-management h2 {
+  font-family: "Poppins", sans-serif;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.account-management h3 {
+  font-family: "Poppins", sans-serif;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.account-management a {
+  display: block;
+  background-color:rgb(40, 97, 183);
+  color: #FFF;
+  padding: 30px;
+  border-radius: 10px;
+  font-weight: 700;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+}
+
+.account-management a:hover,
+.no-bullet li a:hover {
+  background-color:rgb(79, 119, 180);
+}
+
+.logged-in {
+  font-style: italic;
+  margin-top: 90px !important;
 }
 
 .input-box {
@@ -383,7 +434,14 @@ footer p {
   border: none;
   border-radius: .5rem;
   box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.368);
+  font-weight: 700;
 }
+
+.input-box input[type="submit"]:hover {
+  background-color: rgb(174, 48, 48);
+  cursor: pointer;
+}
+
 .input-box .reveal-button {
   color: transparent; /* To make wave happy */
   position: absolute;
@@ -415,35 +473,6 @@ footer p {
 #inventoryDisplay tr td:nth-child(3) {
   width: 75px;
   text-align: end;
-}
-
-/* Message view */
-.message-view {
-  background-color: rgba(255, 255, 255, 0.436);
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.message-view dl {
-  display: grid;
-  grid-template-columns: min-content 1fr;
-  margin: 0;
-  gap: 1rem;
-
-}
-.message-view dl dt, .message-view dl dd {
-  margin: 0;
-}
-.message-view dl dt {
-  font-weight: bold;
-}
-.message-view dl dt:after {
-  content: ":";
-}
-.message-pane {
-  white-space: pre-wrap;
-  font-family: "Poppins", sans-serif;
 }
 
 table {
@@ -492,6 +521,28 @@ table thead tr th {
 .button-strip *:only-child {
   border-radius: .5rem;
 }
+
+/* Vehicle Management */
+
+.no-bullet li {
+  list-style: none;
+}
+
+.no-bullet li:last-child {
+  margin-bottom: 50px;
+}
+
+.no-bullet li a {
+  display: block;
+  background-color:rgb(40, 97, 183);
+  color: #FFF;
+  padding: 15px;
+  margin: 8px;
+  border-radius: 10px;
+  font-weight: 700;
+  text-decoration: none;
+}
+
 
 @media screen and (max-width: 600px){
   body {
