--- a/views/inventory/editInventory.ejs
+++ b/views/inventory/editInventory.ejs
@@ -1,5 +1,5 @@
 <h1><%- title %></h1>
-<%- messages() %> <%# WK4 TSK2.4 %>
+<%- messages() %> 
 <% if (errors) { %>
     <ul class="notice">
    <% errors.array().forEach(error => { %>
