--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,26 +1,30 @@
-<h1><%- title %></h1>
-<%- messages() %>
-<% if (errors) { %>
-    <ul class="notice">
-   <% errors.array().forEach(error => { %>
-     <li><%= error.msg %></li>
-  <%  }) %>
-   </ul>
+<div class="account-container">
+  <h1><%- title %></h1>
+  <%- messages() %> <% if (errors) { %>
+  <ul class="notice">
+    <% errors.array().forEach(error => { %>
+    <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
   <% } %>
 
-<ul class="no-bullet">
+  <ul class="no-bullet">
     <li>
-        <a href="/inv/add-classification">Add New Classification</a>
+      <a href="/inv/add-classification">Add New Classification</a>
     </li>
     <li>
-        <a href="/inv/add-inventory">Add New Vehicle</a>
+      <a href="/inv/add-inventory">Add New Vehicle</a>
     </li>
-</ul>
-<h2>Manage Inventory</h2>
-<div class="input-box">
-    <p>Select a classification from the list to see the items belonging to the classification.</p>
+  </ul>
+  <h2>Manage Inventory</h2>
+  <div class="input-box">
+    <p>
+      Select a classification from the list to see the items belonging to the
+      classification.
+    </p>
     <%- classificationSelect %>
     <table id="inventoryDisplay"></table>
+  </div>
 </div>
 
 <noscript>JavaScript must be enabled to use this page.</noscript>
